modify pop up box

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
             <div class="content">
                 <header>
                     <p>Add Notice</p>
-                    <i class="fa-solid fa-xmark"></i>
+                    <img src="cross.png" class="cross" alt="">
                 </header>
                 <form>
                     <div class="row title">
-                        <label>Date</label>
-                        <input type="date" name="" id="" style="margin: 10px 0;">
+                        <label>Link</label>
+                        <input type="text" name="link" id="link" style="margin: 10px 0;">
                         <label>Title/Notices</label>
                         <textarea id="name"></textarea>
                     </div>
@@ -64,8 +64,8 @@
     </center>
     <div class="add">
         <button class="add-btn">
-            <i class="fa-solid fa-square-plus fa-xl" style="letter-spacing: 0.1rem;"></i>
-            Add Notice
+            <!-- <i class="fa-solid fa-square-plus fa-xl" style="letter-spacing: 0.1rem;"></i> -->
+            <img src="plus.png" class="plus">
         </button>
     </div>
     <script src="script.js"></script>
